# tap-sf311

./: README.md  meltano.yml  out.jsonl  pyproject.toml  tap-sf311.sh  tox.ini
.meltano/: analytics.json  meltano.db
.meltano/cache/: discovery.yml
.meltano/run/: bin
.meltano/run/elt/2021-07-12T162449--tap-sf311--target-jsonl/10396d6f-c416-48dd-bcc4-c7a7ea7edd94/: tap.properties.json
tap_sf311/: client.py  streams.py  tap.py
tap_sf311/schemas/: permit.json  resource.json
tap_sf311/tests/: __init__.py  test_core.py
