[tool.poetry]
name = "tap-sf311"
version = "0.0.1"
description = "`tap-sf311` is a Singer tap for sf311, built with the Meltano SDK for Singer Taps."
authors = ["Sam Edelstein"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6.1"
requests = "^2.25.1"
singer-sdk = "^0.3.3"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sf311 = 'tap_sf311.tap:Tapsf311.cli'
